--- a/BrawlCrate/app.config
+++ b/BrawlCrate/app.config
@@ -1,21 +1,33 @@
 <?xml version="1.0"?>
 <configuration>
   <configSections>
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="BrawlCrate.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="BrawlCrate.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
-  <applicationSettings>
-    <BrawlCrate.Properties.Settings>
-      <setting name="Setting" serializeAs="String">
-        <value>False</value>
-      </setting>
-    </BrawlCrate.Properties.Settings>
-  </applicationSettings>
   <runtime>
   <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
     <probing privatePath="lib"/>
   </assemblyBinding>
 </runtime>
+  <userSettings>
+    <BrawlCrate.Properties.Settings>
+      <setting name="ViewerSettingsSet" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="RecentFilesMax" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="DisplayPropertyDescriptionWhenAvailable" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="CheckUpdatesAtStartup" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="PixelLighting" serializeAs="String">
+        <value>False</value>
+      </setting>
+    </BrawlCrate.Properties.Settings>
+  </userSettings>
 </configuration>
