No longer use "Lib" folder (fixing cross platform capability). Updater brought up to BrawlCrate proper. No longer uses direct DLL references (only uses NuGet)

--- a/BrawlCrate/BrawlCrate.csproj
+++ b/BrawlCrate/BrawlCrate.csproj
@@ -106,9 +106,6 @@ Super Smash Bros. Brawl © 2008 Nintendo and HAL Laboratory</Copyright>
   <PropertyGroup />
   <PropertyGroup />
   <ItemGroup>
-    <PackageReference Include="Microsoft.CSharp" Version="4.*" />
-  </ItemGroup>
-  <ItemGroup>
     <PackageReference Include="DynamicLanguageRuntime" Version="1.2.2" />
     <PackageReference Include="IronPython" Version="2.7.9" />
   </ItemGroup>
@@ -350,305 +347,6 @@ Super Smash Bros. Brawl © 2008 Nintendo and HAL Laboratory</Copyright>
   </ItemGroup>
   <ItemGroup>
     <Content Include="BrawlBox.ico" />
-    <Content Include="Lib\abc.py" />
-    <Content Include="Lib\aifc.py" />
-    <Content Include="Lib\antigravity.py" />
-    <Content Include="Lib\anydbm.py" />
-    <Content Include="Lib\argparse.py" />
-    <Content Include="Lib\ast.py" />
-    <Content Include="Lib\asynchat.py" />
-    <Content Include="Lib\asyncore.py" />
-    <Content Include="Lib\atexit.py" />
-    <Content Include="Lib\audiodev.py" />
-    <Content Include="Lib\base64.py" />
-    <Content Include="Lib\BaseHTTPServer.py" />
-    <Content Include="Lib\Bastion.py" />
-    <Content Include="Lib\bdb.py" />
-    <Content Include="Lib\binhex.py" />
-    <Content Include="Lib\bisect.py" />
-    <Content Include="Lib\calendar.py" />
-    <Content Include="Lib\cgi.py" />
-    <Content Include="Lib\CGIHTTPServer.py" />
-    <Content Include="Lib\cgitb.py" />
-    <Content Include="Lib\chunk.py" />
-    <Content Include="Lib\cmd.py" />
-    <Content Include="Lib\code.py" />
-    <Content Include="Lib\codecs.py" />
-    <Content Include="Lib\codeop.py" />
-    <Content Include="Lib\collections.py" />
-    <Content Include="Lib\colorsys.py" />
-    <Content Include="Lib\commands.py" />
-    <Content Include="Lib\compileall.py" />
-    <Content Include="Lib\ConfigParser.py" />
-    <Content Include="Lib\contextlib.py" />
-    <Content Include="Lib\Cookie.py" />
-    <Content Include="Lib\cookielib.py" />
-    <Content Include="Lib\copy.py" />
-    <Content Include="Lib\csv.py" />
-    <Content Include="Lib\ctypes\util.py" />
-    <Content Include="Lib\ctypes\wintypes.py" />
-    <Content Include="Lib\ctypes\_endian.py" />
-    <Content Include="Lib\ctypes\__init__.py" />
-    <Content Include="Lib\decimal.py" />
-    <Content Include="Lib\difflib.py" />
-    <Content Include="Lib\dircache.py" />
-    <Content Include="Lib\dis.py" />
-    <Content Include="Lib\doctest.py" />
-    <Content Include="Lib\DocXMLRPCServer.py" />
-    <Content Include="Lib\dumbdbm.py" />
-    <Content Include="Lib\dummy_thread.py" />
-    <Content Include="Lib\dummy_threading.py" />
-    <Content Include="Lib\email\base64mime.py" />
-    <Content Include="Lib\email\charset.py" />
-    <Content Include="Lib\email\encoders.py" />
-    <Content Include="Lib\email\errors.py" />
-    <Content Include="Lib\email\feedparser.py" />
-    <Content Include="Lib\email\generator.py" />
-    <Content Include="Lib\email\header.py" />
-    <Content Include="Lib\email\iterators.py" />
-    <Content Include="Lib\email\message.py" />
-    <Content Include="Lib\email\parser.py" />
-    <Content Include="Lib\email\quoprimime.py" />
-    <Content Include="Lib\email\utils.py" />
-    <Content Include="Lib\email\_parseaddr.py" />
-    <Content Include="Lib\email\__init__.py" />
-    <Content Include="Lib\encodings\quopri_codec.py" />
-    <Content Include="Lib\encodings\raw_unicode_escape.py" />
-    <Content Include="Lib\encodings\rot_13.py" />
-    <Content Include="Lib\encodings\string_escape.py" />
-    <Content Include="Lib\encodings\tis_620.py" />
-    <Content Include="Lib\encodings\undefined.py" />
-    <Content Include="Lib\encodings\unicode_escape.py" />
-    <Content Include="Lib\encodings\unicode_internal.py" />
-    <Content Include="Lib\encodings\utf_16.py" />
-    <Content Include="Lib\encodings\utf_16_be.py" />
-    <Content Include="Lib\encodings\utf_16_le.py" />
-    <Content Include="Lib\encodings\utf_32.py" />
-    <Content Include="Lib\encodings\utf_32_le.py" />
-    <Content Include="Lib\encodings\utf_7.py" />
-    <Content Include="Lib\encodings\utf_8.py" />
-    <Content Include="Lib\encodings\utf_8_sig.py" />
-    <Content Include="Lib\encodings\uu_codec.py" />
-    <Content Include="Lib\encodings\zlib_codec.py" />
-    <Content Include="Lib\encodings\__init__.py" />
-    <Content Include="Lib\ensurepip\_uninstall.py" />
-    <Content Include="Lib\ensurepip\__init__.py" />
-    <Content Include="Lib\ensurepip\__main__.py" />
-    <Content Include="Lib\filecmp.py" />
-    <Content Include="Lib\fileinput.py" />
-    <Content Include="Lib\fnmatch.py" />
-    <Content Include="Lib\formatter.py" />
-    <Content Include="Lib\fpformat.py" />
-    <Content Include="Lib\fractions.py" />
-    <Content Include="Lib\ftplib.py" />
-    <Content Include="Lib\functools.py" />
-    <Content Include="Lib\genericpath.py" />
-    <Content Include="Lib\getopt.py" />
-    <Content Include="Lib\getpass.py" />
-    <Content Include="Lib\gettext.py" />
-    <Content Include="Lib\glob.py" />
-    <Content Include="Lib\gzip.py" />
-    <Content Include="Lib\hashlib.py" />
-    <Content Include="Lib\heapq.py" />
-    <Content Include="Lib\hmac.py" />
-    <Content Include="Lib\htmlentitydefs.py" />
-    <Content Include="Lib\htmllib.py" />
-    <Content Include="Lib\HTMLParser.py" />
-    <Content Include="Lib\httplib.py" />
-    <Content Include="Lib\ihooks.py" />
-    <Content Include="Lib\imaplib.py" />
-    <Content Include="Lib\imghdr.py" />
-    <Content Include="Lib\importlib\__init__.py" />
-    <Content Include="Lib\imputil.py" />
-    <Content Include="Lib\inspect.py" />
-    <Content Include="Lib\io.py" />
-    <Content Include="Lib\json\decoder.py" />
-    <Content Include="Lib\json\encoder.py" />
-    <Content Include="Lib\json\scanner.py" />
-    <Content Include="Lib\json\tool.py" />
-    <Content Include="Lib\json\__init__.py" />
-    <Content Include="Lib\keyword.py" />
-    <Content Include="Lib\lib2to3\btm_matcher.py" />
-    <Content Include="Lib\lib2to3\btm_utils.py" />
-    <Content Include="Lib\lib2to3\fixer_base.py" />
-    <Content Include="Lib\lib2to3\fixer_util.py" />
-    <Content Include="Lib\lib2to3\main.py" />
-    <Content Include="Lib\lib2to3\patcomp.py" />
-    <Content Include="Lib\lib2to3\pygram.py" />
-    <Content Include="Lib\lib2to3\pytree.py" />
-    <Content Include="Lib\lib2to3\refactor.py" />
-    <Content Include="Lib\lib2to3\__init__.py" />
-    <Content Include="Lib\lib2to3\__main__.py" />
-    <Content Include="Lib\linecache.py" />
-    <Content Include="Lib\locale.py" />
-    <Content Include="Lib\logging\config.py" />
-    <Content Include="Lib\logging\handlers.py" />
-    <Content Include="Lib\logging\__init__.py" />
-    <Content Include="Lib\macpath.py" />
-    <Content Include="Lib\macurl2path.py" />
-    <Content Include="Lib\mailbox.py" />
-    <Content Include="Lib\mailcap.py" />
-    <Content Include="Lib\markupbase.py" />
-    <Content Include="Lib\md5.py" />
-    <Content Include="Lib\mhlib.py" />
-    <Content Include="Lib\mimetools.py" />
-    <Content Include="Lib\mimetypes.py" />
-    <Content Include="Lib\MimeWriter.py" />
-    <Content Include="Lib\mimify.py" />
-    <Content Include="Lib\modulefinder.py" />
-    <Content Include="Lib\multifile.py" />
-    <Content Include="Lib\mutex.py" />
-    <Content Include="Lib\netrc.py" />
-    <Content Include="Lib\new.py" />
-    <Content Include="Lib\nntplib.py" />
-    <Content Include="Lib\ntpath.py" />
-    <Content Include="Lib\nturl2path.py" />
-    <Content Include="Lib\numbers.py" />
-    <Content Include="Lib\opcode.py" />
-    <Content Include="Lib\optparse.py" />
-    <Content Include="Lib\os.py" />
-    <Content Include="Lib\os2emxpath.py" />
-    <Content Include="Lib\pdb.py" />
-    <Content Include="Lib\pickle.py" />
-    <Content Include="Lib\pickletools.py" />
-    <Content Include="Lib\pipes.py" />
-    <Content Include="Lib\pkgutil.py" />
-    <Content Include="Lib\platform.py" />
-    <Content Include="Lib\plistlib.py" />
-    <Content Include="Lib\popen2.py" />
-    <Content Include="Lib\poplib.py" />
-    <Content Include="Lib\posixfile.py" />
-    <Content Include="Lib\posixpath.py" />
-    <Content Include="Lib\pprint.py" />
-    <Content Include="Lib\profile.py" />
-    <Content Include="Lib\pstats.py" />
-    <Content Include="Lib\pyclbr.py" />
-    <Content Include="Lib\pydoc.py" />
-    <Content Include="Lib\py_compile.py" />
-    <Content Include="Lib\Queue.py" />
-    <Content Include="Lib\quopri.py" />
-    <Content Include="Lib\random.py" />
-    <Content Include="Lib\repr.py" />
-    <Content Include="Lib\rexec.py" />
-    <Content Include="Lib\rfc822.py" />
-    <Content Include="Lib\rlcompleter.py" />
-    <Content Include="Lib\robotparser.py" />
-    <Content Include="Lib\runpy.py" />
-    <Content Include="Lib\sched.py" />
-    <Content Include="Lib\sets.py" />
-    <Content Include="Lib\sgmllib.py" />
-    <Content Include="Lib\sha.py" />
-    <Content Include="Lib\shelve.py" />
-    <Content Include="Lib\shlex.py" />
-    <Content Include="Lib\shutil.py" />
-    <Content Include="Lib\SimpleHTTPServer.py" />
-    <Content Include="Lib\SimpleXMLRPCServer.py" />
-    <Content Include="Lib\site.py" />
-    <Content Include="Lib\smtpd.py" />
-    <Content Include="Lib\smtplib.py" />
-    <Content Include="Lib\sndhdr.py" />
-    <Content Include="Lib\SocketServer.py" />
-    <Content Include="Lib\sqlite3\dbapi2.py" />
-    <Content Include="Lib\sqlite3\dump.py" />
-    <Content Include="Lib\sqlite3\__init__.py" />
-    <Content Include="Lib\sre_compile.py" />
-    <Content Include="Lib\sre_constants.py" />
-    <Content Include="Lib\sre_parse.py" />
-    <Content Include="Lib\ssl.py" />
-    <Content Include="Lib\stat.py" />
-    <Content Include="Lib\statvfs.py" />
-    <Content Include="Lib\string.py" />
-    <Content Include="Lib\StringIO.py" />
-    <Content Include="Lib\stringold.py" />
-    <Content Include="Lib\stringprep.py" />
-    <Content Include="Lib\struct.py" />
-    <Content Include="Lib\subprocess.py" />
-    <Content Include="Lib\sunau.py" />
-    <Content Include="Lib\sunaudio.py" />
-    <Content Include="Lib\symbol.py" />
-    <Content Include="Lib\sysconfig.py" />
-    <Content Include="Lib\tabnanny.py" />
-    <Content Include="Lib\tarfile.py" />
-    <Content Include="Lib\telnetlib.py" />
-    <Content Include="Lib\tempfile.py" />
-    <Content Include="Lib\textwrap.py" />
-    <Content Include="Lib\this.py" />
-    <Content Include="Lib\threading.py" />
-    <Content Include="Lib\timeit.py" />
-    <Content Include="Lib\toaiff.py" />
-    <Content Include="Lib\token.py" />
-    <Content Include="Lib\tokenize.py" />
-    <Content Include="Lib\trace.py" />
-    <Content Include="Lib\traceback.py" />
-    <Content Include="Lib\types.py" />
-    <Content Include="Lib\unittest\case.py" />
-    <Content Include="Lib\unittest\loader.py" />
-    <Content Include="Lib\unittest\main.py" />
-    <Content Include="Lib\unittest\result.py" />
-    <Content Include="Lib\unittest\runner.py" />
-    <Content Include="Lib\unittest\signals.py" />
-    <Content Include="Lib\unittest\suite.py" />
-    <Content Include="Lib\unittest\util.py" />
-    <Content Include="Lib\unittest\__init__.py" />
-    <Content Include="Lib\unittest\__main__.py" />
-    <Content Include="Lib\urllib.py" />
-    <Content Include="Lib\urllib2.py" />
-    <Content Include="Lib\urlparse.py" />
-    <Content Include="Lib\user.py" />
-    <Content Include="Lib\UserDict.py" />
-    <Content Include="Lib\UserList.py" />
-    <Content Include="Lib\UserString.py" />
-    <Content Include="Lib\uu.py" />
-    <Content Include="Lib\uuid.py" />
-    <Content Include="Lib\warnings.py" />
-    <Content Include="Lib\wave.py" />
-    <Content Include="Lib\weakref.py" />
-    <Content Include="Lib\webbrowser.py" />
-    <Content Include="Lib\whichdb.py" />
-    <Content Include="Lib\wsgiref\handlers.py" />
-    <Content Include="Lib\wsgiref\headers.py" />
-    <Content Include="Lib\wsgiref\simple_server.py" />
-    <Content Include="Lib\wsgiref\util.py" />
-    <Content Include="Lib\wsgiref\validate.py" />
-    <Content Include="Lib\wsgiref\__init__.py" />
-    <Content Include="Lib\xdrlib.py" />
-    <Content Include="Lib\xmllib.py" />
-    <Content Include="Lib\xmlrpclib.py" />
-    <Content Include="Lib\xml\dom\domreg.py" />
-    <Content Include="Lib\xml\dom\minicompat.py" />
-    <Content Include="Lib\xml\dom\minidom.py" />
-    <Content Include="Lib\xml\dom\NodeFilter.py" />
-    <Content Include="Lib\xml\dom\pulldom.py" />
-    <Content Include="Lib\xml\dom\xmlbuilder.py" />
-    <Content Include="Lib\xml\dom\__init__.py" />
-    <Content Include="Lib\xml\etree\ElementInclude.py" />
-    <Content Include="Lib\xml\etree\ElementPath.py" />
-    <Content Include="Lib\xml\etree\ElementTree.py" />
-    <Content Include="Lib\xml\etree\SimpleXMLTreeBuilder.py" />
-    <Content Include="Lib\xml\etree\__init__.py" />
-    <Content Include="Lib\xml\sax\handler.py" />
-    <Content Include="Lib\xml\sax\saxutils.py" />
-    <Content Include="Lib\xml\sax\xmlreader.py" />
-    <Content Include="Lib\xml\sax\_exceptions.py" />
-    <Content Include="Lib\xml\sax\__init__.py" />
-    <Content Include="Lib\xml\__init__.py" />
-    <Content Include="Lib\zipfile.py" />
-    <Content Include="Lib\_abcoll.py" />
-    <Content Include="Lib\_LWPCookieJar.py" />
-    <Content Include="Lib\_MozillaCookieJar.py" />
-    <Content Include="Lib\_pyio.py" />
-    <Content Include="Lib\_strptime.py" />
-    <Content Include="Lib\_threading_local.py" />
-    <Content Include="Lib\_weakrefset.py" />
-    <Content Include="Lib\__future__.py" />
-    <Content Include="Lib\__phello__.foo.py" />
-    <Content Include="Loaders\Example Loader %28RFNT%29.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="OpenTK.dll" />
-    <Content Include="Plugins\Example %28tex0 export%29.py">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="Resources\SCLA.png" />
     <None Include="Resources\SharedTEX0.png" />
     <None Include="Resources\BGMG.png" />
@@ -685,10 +383,18 @@ Super Smash Bros. Brawl © 2008 Nintendo and HAL Laboratory</Copyright>
     <Compile Remove="NodeWrappers\ItmFreqWrapper.cs" />
     <Compile Remove="UI\Model Previewer\ModelEditControl\BRRESNodes.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="Loaders\Example Loader %28RFNT%29.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Plugins\Example %28tex0 export%29.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="if not '$(ConfigurationName)' == 'Debug' (&#xD;&#xA;  RD /S /Q &quot;$(TargetDir)&quot;&#xD;&#xA;)" />
   </Target>
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="cd &quot;$(TargetDir)&quot;&#xD;&#xA;mkdir Lib&#xD;&#xA;mkdir Python&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)Updater\$(OutDir)*.dll&quot; &quot;$(TargetDir)\Lib\&quot; /Y /I&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)Updater\$(OutDir)*.exe&quot; &quot;$(TargetDir)\Lib\&quot; /Y /I&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)$(ProjectName)\Lib\*&quot; &quot;$(TargetDir)\Python\&quot; /Y /I /E&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(TargetDir)*.dll&quot; &quot;$(TargetDir)\Lib\&quot; /Y /I&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(TargetDir)*.dll&quot; &quot;$(TargetDir)\Lib\&quot; /Y /I&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(TargetDir)*.dll.config&quot; &quot;$(TargetDir)\Lib\&quot; /Y /I&#xD;&#xA;del *.dll&#xD;&#xA;del *.dll.config&#xD;&#xA;if not '$(ConfigurationName)' == 'Debug' (&#xD;&#xA;  del *.pdb&#xD;&#xA;  del *.config&#xD;&#xA;  cd &quot;$(TargetDir)\Lib&quot;&#xD;&#xA;  del *.pdb&#xD;&#xA;  del *.config&#xD;&#xA;)" />
+    <Exec Command="cd &quot;$(TargetDir)&quot;&#xD;&#xA;mkdir Python&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)$(ProjectName)\Lib\*&quot; &quot;$(TargetDir)\Python\&quot; /Y /I /E&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)Updater\$(OutDir)*.dll&quot; &quot;$(TargetDir)&quot; /Y /I&#xD;&#xA;%25windir%25\system32\xcopy &quot;$(SolutionDir)Updater\$(OutDir)*.exe&quot; &quot;$(TargetDir)&quot; /Y /I&#xD;&#xA;if not '$(ConfigurationName)' == 'Debug' (&#xD;&#xA;  del *.pdb&#xD;&#xA;  del *.config&#xD;&#xA;)" />
   </Target>
 </Project>
