--- a/BrawlLib/app.config
+++ b/BrawlLib/app.config
@@ -1,21 +1,18 @@
 <?xml version="1.0"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="BrawlLib.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false"/>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="BrawlLib.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
-    <userSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup><userSettings>
         <BrawlLib.Properties.Settings>
-            <setting name="Settings" serializeAs="String">
-                <value/>
+            <setting name="HideMDL0Errors" serializeAs="String">
+                <value>False</value>
             </setting>
-            <setting name="S" serializeAs="String">
-                <value/>
-            </setting>
-            <setting name="Setting" serializeAs="String">
-                <value>365</value>
+            <setting name="SaveGCTWithInfo" serializeAs="String">
+                <value>True</value>
             </setting>
         </BrawlLib.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+</configuration>
