Updater AnyCPU configuration actually allows for any CPU

--- a/Updater/Net.csproj
+++ b/Updater/Net.csproj
@@ -14,6 +14,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <OutputPath>bin\Any CPU\$(Configuration)\</OutputPath>
     <DefineConstants>DEBUG</DefineConstants>
+    <Prefer32Bit>true</Prefer32Bit>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <OutputPath>bin\Any CPU\$(Configuration)\</OutputPath>
@@ -26,6 +28,8 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Any CPU\$(Configuration)\</OutputPath>
     <DefineConstants />
+    <Prefer32Bit>true</Prefer32Bit>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
     <OutputPath>bin\Any CPU\$(Configuration)\</OutputPath>
