--- a/BrawlLib/Properties/Settings.settings
+++ b/BrawlLib/Properties/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="AudioVolumePercent" Type="System.Nullable&lt;System.Double&gt;" Scope="User">
       <Value Profile="(Default)">1</Value>
     </Setting>
+    <Setting Name="AutoCompressModules" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
